--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ body{
     font-family: Raleway;
     display: flex;
     justify-content: center;
+    box-sizing: border-box;
 }
 .container{
     width: var(--box-width);
@@ -46,6 +47,8 @@ body{
     background: #34495E;
     cursor: pointer;
     position: fixed;
+    top: 0;
+    left: 0;
     z-index: 3000;
 }
 .hamburguer-box,
@@ -68,7 +71,6 @@ body{
 }
 .menu{
     width: 100%;
-    position: absolute;
     top: 0;
     left: 0;
     height: 100vh;
@@ -140,6 +142,7 @@ header{
     
 }
 .content-info{
+    width: 100%;
     /* background: red; */
     display: flex;
     flex-direction: column;
@@ -150,7 +153,8 @@ header{
 .img-principal{
     z-index: 1000;
     text-align: center;
-    width: 350px;
+    width: 65%;
+    max-width: 350px;
     border-radius: 12px 12px 0 0;
     background: rgba(0, 0, 0, .5);
 }
@@ -159,7 +163,8 @@ header{
     transform: translateY(18px);
 }
 .info-perfil{
-    width: 400px;
+    width: 80%;
+    max-width: 400px;
     background: #ffffff;
     color : #34495E;
     border-radius: 12px;
@@ -185,9 +190,11 @@ header{
     letter-spacing: 1px;
 }
 .redes-sociales{
+    width: 90%;
+    max-width: 410px;
     margin-bottom: 2rem;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     border-radius: 12px;
     padding: 12px;
     background: #34495E;
@@ -195,7 +202,7 @@ header{
 .redes-sociales i{
     color: white;
     font-size: 32px;
-    margin: 0 1.5rem;
+    /* margin: 0 1.5rem; */
 }
 .content-info .vermas{
     background: #34495E;
